--- a/build
+++ b/build
@@ -1,5 +1,4 @@
 #!/usr/bin/bash
 
 //gcc -std=c99 -c -Iduktape-1.0.2/src duktape-1.0.2/src/duktape.c
-gcc -std=c99 -o wincapsule -Iduktape-1.0.2/src  proto.c duktape.o -lm 
-#gcc -std=c99 -o wincapsule -Iduktape-1.0.2/src duktape-1.0.2/src/duktape.c proto.c -lm 
+gcc -std=c99 -o cbc -Iduktape-1.0.2/src  proto.c duktape.o -lm 
