--- a/build
+++ b/build
@@ -1,4 +1,6 @@
 #!/usr/bin/bash
 
-//gcc -std=c99 -c -Iduktape-1.0.2/src duktape-1.0.2/src/duktape.c
-gcc -std=c99 -o cbc -Iduktape-1.0.2/src  proto.c duktape.o -lm 
+#gcc -std=c99 -c -Iduktape-1.0.2/src duktape-1.0.2/src/duktape.c
+#gcc -std=gnu99 -Iduktape-1.0.2/src -lrt -lm -o ccbc -Iduktape-1.0.2/src main.c duktape.o
+i686-w64-mingw32-gcc -Iduktape-1.0.2/src -o wcbc.exe duktape.o  -lshell32 -luser32 main.c -lgdi32
+#gcc -o ecbc main.c -Iduktape-1.0.2/src `pkg-config --cflags --libs ecore eio`
